#122 feat: 그룹 프로필 조회 API 구현